ETS-1873 Fixes crisis navigation overlap

--- a/source/scss/components/header-menu/_header-menu.scss
+++ b/source/scss/components/header-menu/_header-menu.scss
@@ -29,7 +29,7 @@
   overflow: auto;
   padding-bottom: $content-padding-15;
   position: fixed;
-  top: $logo-width-mobile;
+  top: 0;
   width: $header-navigation-mobile-width;
   z-index: $header-z-index;
 }
